plus one fixtures

--- a/spec/fixtures/campaigns.yml
+++ b/spec/fixtures/campaigns.yml
@@ -139,10 +139,16 @@ plus_one:
   enq_id: PulusOneEnqID
   status: 1
   platform: mixi
-  point: 1
+  point: 10
   opening_at: 2012-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
-  movie: /video/yomeishu.mov
-  client_url: http://www.yomeishu.co.jp/megumi/kaorisu
+  movie: /images/media/plus1_sp.mp4
+  thumbnail: /images/poster-sp.jpg
+  message: 
+  conversion_tag: 
+  second_picture: /images/creative-sp.jpg
+  banner_title: 
+  second_point: 
+  client_url: http://ponkan.jp
   
   
