--- a/dapi/spec/fixtures/campaigns.yml
+++ b/dapi/spec/fixtures/campaigns.yml
@@ -142,7 +142,7 @@ plus_one:
   point: 10
   opening_at: 2012-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
-  movie: /video/plus1_sp.mp4
+  movie: /images/media/plus1_sp.mp4
   thumbnail: /images/poster-sp.jpg
   message: 
   conversion_tag: 
