--- a/dapi/spec/fixtures/enq_faces.yml
+++ b/dapi/spec/fixtures/enq_faces.yml
@@ -143,7 +143,7 @@ plus_one_SP:
   uuid: PlusOneSPEnqFaceID
   enq_id: PlusOneEnqID
   face: SP
-  first_page_id: YomeiShuEnqPage1
+  first_page_id: PlusOneEnqPage1
   wait_until: 
   css: /css/sp/themes/plus-1/style.css
   title: 
@@ -153,7 +153,7 @@ plus_one_PC:
   uuid: PlusOnePCEnqFaceID
   enq_id: PlusOneEnqID
   face: PC
-  first_page_id: YomeiShuEnqPage1
+  first_page_id: PlusOneEnqPage1
   wait_until: 
   css: /css/pc/themes/plus-1/style.css
   title: 
