--- a/spec/fixtures/enq_pages.yml
+++ b/spec/fixtures/enq_pages.yml
@@ -157,124 +157,242 @@ incons_question_PC:
 
 
 # 養命酒
-yomei_shu_page1:
-  uuid: YomeiShuEnqPage1
-  enq_face_id: YomeiShuEnqFaceID
-  next_page_id: YomeiShuEnqPage2
+yomei_shu_sp_page1:
+  uuid: YomeiShuSPEnqPage1
+  enq_face_id: YomeiShuSPEnqFaceID
+  next_page_id: YomeiShuSPEnqPage2
 
-yomei_shu_page2:
-  uuid: YomeiShuEnqPage2
-  enq_face_id: YomeiShuEnqFaceID
-  next_page_id: YomeiShuEnqPage3
+yomei_shu_sp_page2:
+  uuid: YomeiShuSPEnqPage2
+  enq_face_id: YomeiShuSPEnqFaceID
+  next_page_id: YomeiShuSPEnqPage3
 
-yomei_shu_page3:
-  uuid: YomeiShuEnqPage3
-  enq_face_id: YomeiShuEnqFaceID
-  next_page_id: YomeiShuEnqPage4
+yomei_shu_sp_page3:
+  uuid: YomeiShuSPEnqPage3
+  enq_face_id: YomeiShuSPEnqFaceID
+  next_page_id: YomeiShuSPEnqPage4
 
-yomei_shu_page4:
-  uuid: YomeiShuEnqPage4
-  enq_face_id: YomeiShuEnqFaceID
-  next_page_id: YomeiShuEnqPage5
+yomei_shu_sp_page4:
+  uuid: YomeiShuSPEnqPage4
+  enq_face_id: YomeiShuSPEnqFaceID
+  next_page_id: YomeiShuSPEnqPage5
 
-yomei_shu_page5:
-  uuid: YomeiShuEnqPage5
-  enq_face_id: YomeiShuEnqFaceID
-  next_page_id: YomeiShuEnqPage6
+yomei_shu_sp_page5:
+  uuid: YomeiShuSPEnqPage5
+  enq_face_id: YomeiShuSPEnqFaceID
+  next_page_id: YomeiShuSPEnqPage6
 
-yomei_shu_page6:
-  uuid: YomeiShuEnqPage6
-  enq_face_id: YomeiShuEnqFaceID
-  next_page_id: YomeiShuEnqPage7
+yomei_shu_sp_page6:
+  uuid: YomeiShuSPEnqPage6
+  enq_face_id: YomeiShuSPEnqFaceID
+  next_page_id: YomeiShuSPEnqPage7
 
-yomei_shu_page7:
-  uuid: YomeiShuEnqPage7
-  enq_face_id: YomeiShuEnqFaceID
-  next_page_id: YomeiShuEnqPage8
+yomei_shu_sp_page7:
+  uuid: YomeiShuSPEnqPage7
+  enq_face_id: YomeiShuSPEnqFaceID
+  next_page_id: YomeiShuSPEnqPage8
 
-yomei_shu_page8:
-  uuid: YomeiShuEnqPage8
-  enq_face_id: YomeiShuEnqFaceID
-  next_page_id: YomeiShuEnqPage9
+yomei_shu_sp_page8:
+  uuid: YomeiShuSPEnqPage8
+  enq_face_id: YomeiShuSPEnqFaceID
+  next_page_id: YomeiShuSPEnqPage9
 
-yomei_shu_page9:
-  uuid: YomeiShuEnqPage9
-  enq_face_id: YomeiShuEnqFaceID
-  next_page_id: YomeiShuEnqPage10
+yomei_shu_sp_page9:
+  uuid: YomeiShuSPEnqPage9
+  enq_face_id: YomeiShuSPEnqFaceID
+  next_page_id: YomeiShuSPEnqPage10
 
-yomei_shu_page10:
-  uuid: YomeiShuEnqPage10
-  enq_face_id: YomeiShuEnqFaceID
-  next_page_id: YomeiShuEnqPage11
+yomei_shu_sp_page10:
+  uuid: YomeiShuSPEnqPage10
+  enq_face_id: YomeiShuSPEnqFaceID
+  next_page_id: YomeiShuSPEnqPage11
   
-yomei_shu_page11:
-  uuid: YomeiShuEnqPage11
-  enq_face_id: YomeiShuEnqFaceID
+yomei_shu_sp_page11:
+  uuid: YomeiShuSPEnqPage11
+  enq_face_id: YomeiShuSPEnqFaceID
 
+yomei_shu_pc_page1:
+  uuid: YomeiShuPCEnqPage1
+  enq_face_id: YomeiShuPCEnqFaceID
+  next_page_id: YomeiShuPCEnqPage2
+
+yomei_shu_pc_page2:
+  uuid: YomeiShuPCEnqPage2
+  enq_face_id: YomeiShuPCEnqFaceID
+  next_page_id: YomeiShuPCEnqPage3
+
+yomei_shu_pc_page3:
+  uuid: YomeiShuPCEnqPage3
+  enq_face_id: YomeiShuPCEnqFaceID
+  next_page_id: YomeiShuPCEnqPage4
+
+yomei_shu_pc_page4:
+  uuid: YomeiShuPCEnqPage4
+  enq_face_id: YomeiShuPCEnqFaceID
+  next_page_id: YomeiShuPCEnqPage5
+
+yomei_shu_pc_page5:
+  uuid: YomeiShuPCEnqPage5
+  enq_face_id: YomeiShuPCEnqFaceID
+  next_page_id: YomeiShuPCEnqPage6
+
+yomei_shu_pc_page6:
+  uuid: YomeiShuPCEnqPage6
+  enq_face_id: YomeiShuPCEnqFaceID
+  next_page_id: YomeiShuPCEnqPage7
+
+yomei_shu_pc_page7:
+  uuid: YomeiShuPCEnqPage7
+  enq_face_id: YomeiShuPCEnqFaceID
+  next_page_id: YomeiShuPCEnqPage8
+
+yomei_shu_pc_page8:
+  uuid: YomeiShuPCEnqPage8
+  enq_face_id: YomeiShuPCEnqFaceID
+  next_page_id: YomeiShuPCEnqPage9
+
+yomei_shu_pc_page9:
+  uuid: YomeiShuPCEnqPage9
+  enq_face_id: YomeiShuPCEnqFaceID
+  next_page_id: YomeiShuPCEnqPage10
+
+yomei_shu_pc_page10:
+  uuid: YomeiShuPCEnqPage10
+  enq_face_id: YomeiShuPCEnqFaceID
+  next_page_id: YomeiShuPCEnqPage11
+  
+yomei_shu_pc_page11:
+  uuid: YomeiShuPCEnqPage11
+  enq_face_id: YomeiShuPCEnqFaceID
+
+  
 # プラスワン
-plus_one_page1:
-  uuid: PlusOneEnqPage1
-  enq_face_id: PlusOneEnqFaceID
+plus_one_sp_page1:
+  uuid: PlusOneSPEnqPage1
+  enq_face_id: PlusOneSPEnqFaceID
   description: プロフィール
-  next_page_id: PlusOneEnqPage2
+  next_page_id: PlusOneSPEnqPage2
 
-plus_one_page2:
-  uuid: PlusOneEnqPage2
-  enq_face_id: PlusOneEnqFaceID
+plus_one_sp_page2:
+  uuid: PlusOneSPEnqPage2
+  enq_face_id: PlusOneSPEnqFaceID
   description: 
-  next_page_id: PlusOneEnqPage3
+  next_page_id: PlusOneSPEnqPage3
 
-plus_one_page3:
-  uuid: PlusOneEnqPage3
-  enq_face_id: PlusOneEnqFaceID
+plus_one_sp_page3:
+  uuid: PlusOneSPEnqPage3
+  enq_face_id: PlusOneSPEnqFaceID
   description: 
-  next_page_id: PlusOneEnqPage4
+  next_page_id: PlusOneSPEnqPage4
 
-plus_one_page4:
-  uuid: PlusOneEnqPage4
-  enq_face_id: PlusOneEnqFaceID
+plus_one_sp_page4:
+  uuid: PlusOneSPEnqPage4
+  enq_face_id: PlusOneSPEnqFaceID
   description: 
-  next_page_id: PlusOneEnqPage5
+  next_page_id: PlusOneSPEnqPage5
 
-plus_one_page5:
-  uuid: PlusOneEnqPage5
-  enq_face_id: PlusOneEnqFaceID
+plus_one_sp_page5:
+  uuid: PlusOneSPEnqPage5
+  enq_face_id: PlusOneSPEnqFaceID
   description: 
-  next_page_id: PlusOneEnqPage6
+  next_page_id: PlusOneSPEnqPage6
 
-plus_one_page6:
-  uuid: PlusOneEnqPage6
-  enq_face_id: PlusOneEnqFaceID
+plus_one_sp_page6:
+  uuid: PlusOneSPEnqPage6
+  enq_face_id: PlusOneSPEnqFaceID
   description: 
-  next_page_id: PlusOneEnqPage7
+  next_page_id: PlusOneSPEnqPage7
 
-plus_one_page7:
-  uuid: PlusOneEnqPage7
-  enq_face_id: PlusOneEnqFaceID
+plus_one_sp_page7:
+  uuid: PlusOneSPEnqPage7
+  enq_face_id: PlusOneSPEnqFaceID
   description: 
-  next_page_id: PlusOneEnqPage8
+  next_page_id: PlusOneSPEnqPage8
 
-plus_one_page8:
-  uuid: PlusOneEnqPage8
-  enq_face_id: PlusOneEnqFaceID
+plus_one_sp_page8:
+  uuid: PlusOneSPEnqPage8
+  enq_face_id: PlusOneSPEnqFaceID
   description: 
-  next_page_id: PlusOneEnqPage9
+  next_page_id: PlusOneSPEnqPage9
 
-plus_one_page9:
-  uuid: PlusOneEnqPage9
-  enq_face_id: PlusOneEnqFaceID
+plus_one_sp_page9:
+  uuid: PlusOneSPEnqPage9
+  enq_face_id: PlusOneSPEnqFaceID
   description: 
-  next_page_id: PlusOneEnqPage10
+  next_page_id: PlusOneSPEnqPage10
 
-plus_one_page10:
-  uuid: PlusOneEnqPage10
-  enq_face_id: PlusOneEnqFaceID
+plus_one_sp_page10:
+  uuid: PlusOneSPEnqPage10
+  enq_face_id: PlusOneSPEnqFaceID
   description: 
-  next_page_id: PlusOneEnqPage11
+  next_page_id: PlusOneSPEnqPage11
   
-plus_one_page11:
-  uuid: PlusOneEnqPage11
-  enq_face_id: PlusOneEnqFaceID
+plus_one_sp_page11:
+  uuid: PlusOneSPEnqPage11
+  enq_face_id: PlusOneSPEnqFaceID
   description: 
 
+plus_one_pc_page1:
+  uuid: PlusOnePCEnqPage1
+  enq_face_id: PlusOnePCEnqFaceID
+  description: プロフィール
+  next_page_id: PlusOnePCEnqPage2
 
+plus_one_pc_page2:
+  uuid: PlusOnePCEnqPage2
+  enq_face_id: PlusOnePCEnqFaceID
+  description: 
+  next_page_id: PlusOnePCEnqPage3
+
+plus_one_pc_page3:
+  uuid: PlusOnePCEnqPage3
+  enq_face_id: PlusOnePCEnqFaceID
+  description: 
+  next_page_id: PlusOnePCEnqPage4
+
+plus_one_pc_page4:
+  uuid: PlusOnePCEnqPage4
+  enq_face_id: PlusOnePCEnqFaceID
+  description: 
+  next_page_id: PlusOnePCEnqPage5
+
+plus_one_pc_page5:
+  uuid: PlusOnePCEnqPage5
+  enq_face_id: PlusOnePCEnqFaceID
+  description: 
+  next_page_id: PlusOnePCEnqPage6
+
+plus_one_pc_page6:
+  uuid: PlusOnePCEnqPage6
+  enq_face_id: PlusOnePCEnqFaceID
+  description: 
+  next_page_id: PlusOnePCEnqPage7
+
+plus_one_pc_page7:
+  uuid: PlusOnePCEnqPage7
+  enq_face_id: PlusOnePCEnqFaceID
+  description: 
+  next_page_id: PlusOnePCEnqPage8
+
+plus_one_pc_page8:
+  uuid: PlusOnePCEnqPage8
+  enq_face_id: PlusOnePCEnqFaceID
+  description: 
+  next_page_id: PlusOnePCEnqPage9
+
+plus_one_pc_page9:
+  uuid: PlusOnePCEnqPage9
+  enq_face_id: PlusOnePCEnqFaceID
+  description: 
+  next_page_id: PlusOnePCEnqPage10
+
+plus_one_pc_page10:
+  uuid: PlusOnePCEnqPage10
+  enq_face_id: PlusOnePCEnqFaceID
+  description: 
+  next_page_id: PlusOnePCEnqPage11
+  
+plus_one_pc_page11:
+  uuid: PlusOnePCEnqPage11
+  enq_face_id: PlusOnePCEnqFaceID
+  description: 
