--- a/dapi/spec/fixtures/enq_pages.yml
+++ b/dapi/spec/fixtures/enq_pages.yml
@@ -160,117 +160,139 @@ incons_question_PC:
 yomei_shu_sp_page1:
   uuid: YomeiShuSPEnqPage1
   enq_face_id: YomeiShuSPEnqFaceID
+  description: 
   next_page_id: YomeiShuSPEnqPage2
 
 yomei_shu_sp_page2:
   uuid: YomeiShuSPEnqPage2
   enq_face_id: YomeiShuSPEnqFaceID
+  description: 
   next_page_id: YomeiShuSPEnqPage3
 
 yomei_shu_sp_page3:
   uuid: YomeiShuSPEnqPage3
   enq_face_id: YomeiShuSPEnqFaceID
+  description: 
   next_page_id: YomeiShuSPEnqPage4
 
 yomei_shu_sp_page4:
   uuid: YomeiShuSPEnqPage4
   enq_face_id: YomeiShuSPEnqFaceID
+  description: 
   next_page_id: YomeiShuSPEnqPage5
 
 yomei_shu_sp_page5:
   uuid: YomeiShuSPEnqPage5
   enq_face_id: YomeiShuSPEnqFaceID
+  description: 
   next_page_id: YomeiShuSPEnqPage6
 
 yomei_shu_sp_page6:
   uuid: YomeiShuSPEnqPage6
   enq_face_id: YomeiShuSPEnqFaceID
+  description: 
   next_page_id: YomeiShuSPEnqPage7
 
 yomei_shu_sp_page7:
   uuid: YomeiShuSPEnqPage7
   enq_face_id: YomeiShuSPEnqFaceID
+  description: 
   next_page_id: YomeiShuSPEnqPage8
 
 yomei_shu_sp_page8:
   uuid: YomeiShuSPEnqPage8
   enq_face_id: YomeiShuSPEnqFaceID
+  description: 
   next_page_id: YomeiShuSPEnqPage9
 
 yomei_shu_sp_page9:
   uuid: YomeiShuSPEnqPage9
   enq_face_id: YomeiShuSPEnqFaceID
+  description: 
   next_page_id: YomeiShuSPEnqPage10
 
 yomei_shu_sp_page10:
   uuid: YomeiShuSPEnqPage10
   enq_face_id: YomeiShuSPEnqFaceID
+  description: 
   next_page_id: YomeiShuSPEnqPage11
   
 yomei_shu_sp_page11:
   uuid: YomeiShuSPEnqPage11
   enq_face_id: YomeiShuSPEnqFaceID
+  description: 
 
 yomei_shu_pc_page1:
   uuid: YomeiShuPCEnqPage1
   enq_face_id: YomeiShuPCEnqFaceID
+  description: 
   next_page_id: YomeiShuPCEnqPage2
 
 yomei_shu_pc_page2:
   uuid: YomeiShuPCEnqPage2
   enq_face_id: YomeiShuPCEnqFaceID
+  description: 
   next_page_id: YomeiShuPCEnqPage3
 
 yomei_shu_pc_page3:
   uuid: YomeiShuPCEnqPage3
   enq_face_id: YomeiShuPCEnqFaceID
+  description: 
   next_page_id: YomeiShuPCEnqPage4
 
 yomei_shu_pc_page4:
   uuid: YomeiShuPCEnqPage4
   enq_face_id: YomeiShuPCEnqFaceID
+  description: 
   next_page_id: YomeiShuPCEnqPage5
 
 yomei_shu_pc_page5:
   uuid: YomeiShuPCEnqPage5
   enq_face_id: YomeiShuPCEnqFaceID
+  description: 
   next_page_id: YomeiShuPCEnqPage6
 
 yomei_shu_pc_page6:
   uuid: YomeiShuPCEnqPage6
   enq_face_id: YomeiShuPCEnqFaceID
+  description: 
   next_page_id: YomeiShuPCEnqPage7
 
 yomei_shu_pc_page7:
   uuid: YomeiShuPCEnqPage7
   enq_face_id: YomeiShuPCEnqFaceID
+  description: 
   next_page_id: YomeiShuPCEnqPage8
 
 yomei_shu_pc_page8:
   uuid: YomeiShuPCEnqPage8
   enq_face_id: YomeiShuPCEnqFaceID
+  description: 
   next_page_id: YomeiShuPCEnqPage9
 
 yomei_shu_pc_page9:
   uuid: YomeiShuPCEnqPage9
   enq_face_id: YomeiShuPCEnqFaceID
+  description: 
   next_page_id: YomeiShuPCEnqPage10
 
 yomei_shu_pc_page10:
   uuid: YomeiShuPCEnqPage10
   enq_face_id: YomeiShuPCEnqFaceID
+  description: 
   next_page_id: YomeiShuPCEnqPage11
   
 yomei_shu_pc_page11:
   uuid: YomeiShuPCEnqPage11
   enq_face_id: YomeiShuPCEnqFaceID
+  description: 
 
   
 # プラスワン
 plus_one_sp_page1:
   uuid: PlusOneSPEnqPage1
   enq_face_id: PlusOneSPEnqFaceID
-  description: プロフィール
+  description: 
   next_page_id: PlusOneSPEnqPage2
 
 plus_one_sp_page2:
@@ -325,17 +347,17 @@ plus_one_sp_page10:
   uuid: PlusOneSPEnqPage10
   enq_face_id: PlusOneSPEnqFaceID
   description: 
-  next_page_id: PlusOneSPEnqPage11
-  
-plus_one_sp_page11:
-  uuid: PlusOneSPEnqPage11
-  enq_face_id: PlusOneSPEnqFaceID
-  description: 
+#  next_page_id: PlusOneSPEnqPage11
+#  
+#plus_one_sp_page11:
+#  uuid: PlusOneSPEnqPage11
+#  enq_face_id: PlusOneSPEnqFaceID
+#  description: 
 
 plus_one_pc_page1:
   uuid: PlusOnePCEnqPage1
   enq_face_id: PlusOnePCEnqFaceID
-  description: プロフィール
+  description: 
   next_page_id: PlusOnePCEnqPage2
 
 plus_one_pc_page2:
@@ -390,9 +412,9 @@ plus_one_pc_page10:
   uuid: PlusOnePCEnqPage10
   enq_face_id: PlusOnePCEnqFaceID
   description: 
-  next_page_id: PlusOnePCEnqPage11
-  
-plus_one_pc_page11:
-  uuid: PlusOnePCEnqPage11
-  enq_face_id: PlusOnePCEnqFaceID
-  description: 
+#  next_page_id: PlusOnePCEnqPage11
+#  
+#plus_one_pc_page11:
+#  uuid: PlusOnePCEnqPage11
+#  enq_face_id: PlusOnePCEnqFaceID
+#  description: 
