--- a/test/fixtures/enq_faces.yml
+++ b/test/fixtures/enq_faces.yml
@@ -123,7 +123,7 @@ incons_question_PC:
 
 # 養命酒
 yomei_shu_SP:
-  uuid: YomeiShuSPEnqFaceSPID
+  uuid: YomeiShuSPEnqFaceID
   enq_id: YomeiShuEnqID
   face: SP
   first_page_id: YomeiShuEnqPage1
@@ -131,7 +131,7 @@ yomei_shu_SP:
   title: 動画キャンペーン
  
 yomei_shu_PC:
-  uuid: YomeiShuPCEnqFacePCID
+  uuid: YomeiShuPCEnqFaceID
   enq_id: YomeiShuEnqID
   face: PC
   first_page_id: YomeiShuEnqPage1
@@ -140,22 +140,22 @@ yomei_shu_PC:
  
 # プラスワン
 plus_one_SP:
-  uuid: PlusOneSPEnqFaceSPID
+  uuid: PlusOneSPEnqFaceID
   enq_id: PlusOneEnqID
   face: SP
   first_page_id: PlusOneSPEnqPage1
   wait_until: 
   css: /css/sp/themes/plus-1/style.css
-  title: title_SP
-  description: desctiption_SP
+  title: 
+  description: 
  
 plus_one_PC:
-  uuid: PlusOnePCEnqFacePCID
+  uuid: PlusOnePCEnqFaceID
   enq_id: PlusOneEnqID
   face: PC
   first_page_id: PlusOnePCEnqPage1
   wait_until: 
   css: /css/pc/themes/plus-1/style.css
-  title: title_PC
-  description: description_PC
+  title: 
+  description: 
  
